--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "has-cors": "^1.1.0",
     "jquery": "^3.6.0",
     "keycloak-js": "^15.0.2",
     "moment": "^2.29.1",
